# learning-sandbox

./: .gitignore  CONVENTIONS.md  GENERATION_STATE.md  PROGRESS.md  README.md  SPEC.md
04-storage-and-formats/: README.md  docker-compose.yml  generate.py  pyproject.toml
04-storage-and-formats/.authoring/: notes.md
04-storage-and-formats/01-format-shootout/: NOTES.md  README.md
04-storage-and-formats/02-compression-codecs/: NOTES.md  README.md
04-storage-and-formats/03-row-groups-and-pushdown/: NOTES.md  README.md
04-storage-and-formats/04-partitioned-datasets/: NOTES.md  README.md
04-storage-and-formats/05-minio-object-store/: NOTES.md  README.md
04-storage-and-formats/06-delta-lake/: NOTES.md  README.md
04-storage-and-formats/07-duckdb-taste/: NOTES.md  README.md
04-storage-and-formats/08-capstone-lake-layout/: DESIGN.md  NOTES.md  README.md
04-storage-and-formats/harness/: common.py
05-distributed-processing-spark/: README.md  docker-compose.yml  generate.py  pyproject.toml  run.sh
05-distributed-processing-spark/.authoring/: notes.md
05-distributed-processing-spark/01-lazy-plans-and-explain/: NOTES.md  README.md
05-distributed-processing-spark/02-partitions-and-shuffles/: NOTES.md  README.md
05-distributed-processing-spark/03-joins-broadcast-vs-smj/: NOTES.md  README.md
05-distributed-processing-spark/04-udfs-and-arrow/: NOTES.md  README.md
05-distributed-processing-spark/05-windows-at-scale/: NOTES.md  README.md
05-distributed-processing-spark/06-parquet-to-minio-s3a/: NOTES.md  README.md
05-distributed-processing-spark/07-polars-calibration/: NOTES.md  README.md
05-distributed-processing-spark/08-capstone-scrape-lake/: DESIGN.md  NOTES.md  README.md
05-distributed-processing-spark/harness/: common.py
06-pipelines-and-orchestration/: .gitignore  README.md  docker-compose.yml  generate.py  pyproject.toml
06-pipelines-and-orchestration/.authoring/: design.md  notes-infra-data.md  notes-infra-docker.md  notes-live-verification.md  notes-tasks-01-03.md  notes-tasks-05-06.md
06-pipelines-and-orchestration/01-first-dag-raw-to-staging/: NOTES.md  README.md
06-pipelines-and-orchestration/02-incremental-idempotent-loads/: NOTES.md  README.md
06-pipelines-and-orchestration/03-backfill-and-recovery/: NOTES.md  README.md
06-pipelines-and-orchestration/04-poison-records-and-alerting/: README.md
06-pipelines-and-orchestration/05-contract-gate-pandera/: README.md
06-pipelines-and-orchestration/06-contract-evolution/: README.md
06-pipelines-and-orchestration/07-spark-stage-silver-lake/: NOTES.md  README.md
06-pipelines-and-orchestration/08-dbt-marts-over-oltp/: .gitignore  README.md
06-pipelines-and-orchestration/09-prefect-migration/: COMPARISON.md  README.md
06-pipelines-and-orchestration/10-capstone-end-to-end/: NOTES.md  README.md
06-pipelines-and-orchestration/dags/: smoke_env.py
06-pipelines-and-orchestration/data/: ground-truth.json
06-pipelines-and-orchestration/docker/: warehouse-init.sql
06-pipelines-and-orchestration/harness/: common.py
06-pipelines-and-orchestration/k8s-bonus/: NOTES.md  README.md
07-streaming/: README.md  docker-compose.yml  generate.py  pyproject.toml
07-streaming/.authoring/: design.md  notes-live-verification.md
07-streaming/01-log-vs-queue-and-offsets/: NOTES.md  README.md
07-streaming/02-delivery-semantics/: NOTES.md  README.md
07-streaming/03-consumer-groups-rebalancing/: NOTES.md  README.md
07-streaming/04-exactly-once-into-postgres/: NOTES.md  README.md
07-streaming/05-windowed-aggregation/: NOTES.md  README.md
07-streaming/06-lag-monitoring/: NOTES.md  README.md
07-streaming/07-compacted-topics/: NOTES.md  README.md
07-streaming/08-kafka-transactions-eos/: NOTES.md  README.md
07-streaming/09-rmq-vs-kafka-writeup/: ANSWER.md  README.md
07-streaming/10-capstone-streaming-pipeline/: NOTES.md  README.md
07-streaming/data/: ground-truth.json
07-streaming/docker/: warehouse-init.sql
07-streaming/harness/: common.py
07-streaming/k8s-bonus/: NOTES.md  README.md
08-cdc-debezium/: README.md  docker-compose.yml  generate.py  pyproject.toml
08-cdc-debezium/.authoring/: design.md  notes-infra.md  notes-live-verification.md
08-cdc-debezium/01-connector-setup-snapshot-vs-streaming/: NOTES.md  README.md
08-cdc-debezium/02-change-event-anatomy/: NOTES.md  README.md
08-cdc-debezium/03-updates-and-deletes-downstream/: NOTES.md  README.md
08-cdc-debezium/04-schema-evolution/: NOTES.md  README.md
08-cdc-debezium/05-replica-lag-and-alerting/: NOTES.md  README.md
08-cdc-debezium/06-exactly-once-materialization/: NOTES.md  README.md
08-cdc-debezium/07-cdc-vs-rescraping-writeup/: ANSWER.md  README.md
08-cdc-debezium/08-capstone-converge/: NOTES.md  README.md
08-cdc-debezium/data/: ground-truth.json
08-cdc-debezium/docker/: mart-init.sql  source-init.sql
08-cdc-debezium/harness/: common.py
09-olap-clickhouse-duckdb/: README.md  docker-compose.yml  generate.py  pyproject.toml
09-olap-clickhouse-duckdb/.authoring/: design.md  notes-infra.md
09-olap-clickhouse-duckdb/01-mergetree-and-primary-index/: NOTES.md  README.md
09-olap-clickhouse-duckdb/02-materialized-views/: NOTES.md  README.md
09-olap-clickhouse-duckdb/03-replacingmergetree-dedup/: NOTES.md  README.md
09-olap-clickhouse-duckdb/04-ttl-and-lifecycle/: NOTES.md  README.md
10-nosql-patterns/: README.md  docker-compose.yml  generate.py  pyproject.toml
11-python-concurrency/: README.md  generate.py  pyproject.toml
12-api-engineering/: .gitignore  README.md  docker-compose.yml  generate.py  pyproject.toml
13-scraping-at-scale/: .gitignore  README.md  docker-compose.yml  generate.py  pyproject.toml
14-stats-and-ml-foundations/: .gitignore  README.md  generate.py  pyproject.toml
15-llm-in-pipelines/: README.md  docker-compose.yml  generate.py  pyproject.toml
16-testing-engineering/: README.md  pyproject.toml
17-system-design/: .gitignore  README.md  pyproject.toml
18-rust-track/: .gitignore  Cargo.toml  README.md
20-kubernetes/: README.md  pyproject.toml
(+1880 files in other folders)
