[project]
name = "distributed-processing-spark"
version = "0.1.0"
description = "Module 05: PySpark distributed processing for the PriceWatch scraped price snapshots (lazy plans, shuffles, joins, UDFs, window functions, Parquet-on-MinIO, polars calibration)"
requires-python = ">=3.12"
dependencies = [
    "duckdb==1.5.4",
    "faker==40.28.1",
    "numpy==2.5.1",
    "polars==1.38.1",
    "pyarrow==24.0.0",
]
