[project]
name = "streaming"
version = "0.1.0"
description = "Module 07: Kafka (redpanda) for the RabbitMQ-minded — log vs queue, offsets, consumer groups, exactly-once into Postgres, windowed aggregation, lag monitoring, compacted topics, transactions"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.6.1",
    "psycopg[binary]>=3.3.4",
    "numpy>=2.4.6",
    "faker>=40.28.1",
    "pytest>=9.1.1",
    "requests>=2.34.2",
    "pyyaml>=6.0.2",
]
