[project]
name = "stats-and-ml-foundations"
version = "0.1.0"
description = "Module 14: statistical and ML literacy grounded in a shared scraped product-price dataset — numpy/pandas vectorization and matplotlib fundamentals (Arc A), applied statistics on real-world-shaped data: non-normal distributions, outliers vs. parsing errors, confidence intervals, bootstrap, A/B testing, correlation vs. causation (Arc B, the core), and a shallow but honest tour of sklearn pipeline leakage, feature engineering, PyTorch tensors/autograd, capped by a text-classification capstone (Arc C). Pure Python, no docker."
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2",
    "polars>=1",
    "pyarrow>=15",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "torch>=2.2",
    "pytest>=8",
]
