[project]
name = "llm-in-pipelines"
version = "0.1.0"
description = "Module 15: using a local Ollama-served 7B model as a pipeline component — structured extraction from messy HTML, record classification and enrichment, embedding-based dedup, and a mini-RAG over the sandbox's own docs. The LLM client is swappable so a cloud API can replace Ollama with one config change."
requires-python = ">=3.12,<3.14"
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "pytest>=8",
]
