[project]
name = "sandbox-17-system-design"
version = "0.1.0"
description = "Module 17: system design — written design exercises (price monitoring at 10k-site scale, price-history storage, delivery with client SLAs, multi-tenant platform, outage postmortem redesign, capstone design review). No docker, no database. Each task pairs a filled DESIGN.md against a hostile-review checklist with a small back-of-the-envelope capacity model in src/estimate.py, graded numerically against an independent recomputation across perturbed workloads."
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
]
