[workspace]
resolver = "3"
members = [
    "harness",
    "datagen",
    "01-log-parser-aggregations",
    "02-toy-expression-interpreter",
    "03-csv-to-parquet",
    "04-url-health-checker",
    "05-bitcask-kv-store",
    "06-tui-log-dashboard",
    "07-async-fetch-pipeline",
    "08-capstone-price-watch",
    "proc-macro-bonus",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"

# Pinned once here so task crates just write `dep.workspace = true`.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow = "*"
parquet = "*"
ratatui = "*"
crossterm = "*"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
tempfile = "3"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

sandbox18-harness = { path = "harness" }

[profile.dev]
debug = 1
