[project]
name = "sandbox-t2-modern-python-toolchain"
version = "0.1.0"
description = "Toolkit module t2: modern Python toolchain — uv project/tool management, ruff lint+format, strict typing (mypy), pre-commit wiring, and packaging a small internal library with a src layout"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8",
    "pyyaml>=6",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.7",
    "pre-commit>=4",
]
